# OSaSP_lab1

./: .gitignore  CMakeLists.txt  Makefile  README.md  lab01.pdf.odt
src/: auxiliary_functions.c  dirwalk.h  main.c  walk_directory.c
